# volksbot-1

ros2_ws/src/obstacle_avoidance/: CMakeLists.txt  package.xml
ros2_ws/src/obstacle_avoidance/include/obstacle_avoidance/: k-freespace.h
ros2_ws/src/obstacle_avoidance/src/: k-freespace.c  obstacle_avoidance_node.cc
ros2_ws/src/volksbot/config/: amcl_config.yaml  costmap_config.yaml
ros2_ws/src/volksbot/launch/: nav2_amcl_launch.py
ros2_ws/src/volkslaunch/launch/: praktikum_launch.py
